
Wed Jun 19 22:33:37 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* ecore.cs: don't use ldlen with System.Array.

Wed Jun 19 20:57:40 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* ecore.cs: stobj requires a type argument. Handle indirect stores on enums.

Wed Jun 19 20:17:59 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* modifiers.cs: produce correct field attributes for protected
	internal. Easy fix so miguel can work on ther harder stuff:-)

2002-06-18  Miguel de Icaza  <miguel@ximian.com>

	* pending.cs: New file.  Move the code from class.cs here.
	Support clearning the pending flag for all methods (when not doing
	explicit interface implementation).

Tue Jun 18 10:36:22 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* rootcontext.cs: added a couple more types needed to bootstrap.

2002-06-17  Miguel de Icaza  <miguel@ximian.com>

	* typemanager.cs (GetConstructor): Use DeclaredOnly to look the
	constructor in the type, instead of any constructor in the type
	hierarchy.  Thanks to Paolo for finding this bug (it showed up as
	a bug in the Mono runtime when applying the params attribute). 

2002-06-16  Rafael Teixeira  <rafaelteixeirabr@hotmail.com>
	* changed namespace.cs to use "GenericParser.error(...)" instead of "CSharpParser.error(...)"

2002-06-14  Rachel Hestilow  <hestilow@ximian.com>

	* expression.cs (Unary.ResolveOperator): Use TypeManager
	to resolve the type.
	
2002-06-13  Ravi Pratap  <ravi@ximian.com>

	* cs-parser.jay (enum_member_declaration): Pass in the attributes
	attached.

	* enum.cs (AddEnumMember): Add support to store the attributes associated 
	with each member too.

	* attribute.cs (CheckAttribute, ApplyAttributes): Update to handle
	field builders too - this takes care of the enum member case.

2002-06-10  Rachel Hestilow  <hestilow@ximian.com>

	* typemanager.cs (TypeManager.VerifyUnManaged): Allow
	address-of operator on both value types and pointers.
	
2002-06-10  Martin Baulig  <martin@gnome.org>
