@@ -1,4 +1,9 @@
 
+Thu Jun 20 17:56:48 CEST 2002 Paolo Molaro <lupus@ximian.com>
+
+	* class.cs: do not allow the same interface to appear twice in
+	the definition list.
+
 Wed Jun 19 22:33:37 CEST 2002 Paolo Molaro <lupus@ximian.com>
 
 	* ecore.cs: don't use ldlen with System.Array.
